force-app/main/default/objects/OrderH__c/fields/Delivery_City__c.field-meta.xml
<CustomField>
    <fullName>Delivery_City__c</fullName>
    <description>Delivery city.</description>
    <label>Delivery City</label>
    <length>80</length>
    <type>Text</type>
</CustomField>