force-app/main/default/objects/OrderH__c/fields/Delivery_Name__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Name__c</fullName>
    <description>Recipient name for the demo order.</description>
    <label>Delivery Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>