force-app/main/default/objects/OrderH__c/fields/Delivery_Notes__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Notes__c</fullName>
    <description>Optional delivery notes from the customer.</description>
    <label>Delivery Notes</label>
    <type>TextArea</type>
</CustomField>