force-app/main/default/objects/OrderH__c/fields/Delivery_Phone__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Phone__c</fullName>
    <description>Contact phone for the delivery.</description>
    <label>Delivery Phone</label>
    <type>Phone</type>
</CustomField>