force-app/main/default/objects/OrderH__c/fields/Delivery_State__c.field-meta.xml
<CustomField>
    <fullName>Delivery_State__c</fullName>
    <description>Delivery state or region.</description>
    <label>Delivery State</label>
    <length>40</length>
    <type>Text</type>
</CustomField>