force-app/main/default/objects/OrderH__c/fields/Delivery_Zip__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Zip__c</fullName>
    <description>Delivery postal code.</description>
    <label>Delivery Zip</label>
    <length>20</length>
    <type>Text</type>
</CustomField>