force-app/main/default/objects/OrderH__c/fields/Placed_At__c.field-meta.xml
<CustomField>
    <fullName>Placed_At__c</fullName>
    <description>When the demo order was placed.</description>
    <label>Placed At</label>
    <type>DateTime</type>
</CustomField>